--- a/LoogingNetCore/LoogingNetCore/appsettings.Development.json
+++ b/LoogingNetCore/LoogingNetCore/appsettings.Development.json
@@ -75,5 +75,8 @@
     //"Properties": {
     //  "Environment": "LocalDev"
     //}
-  }
+  },
+  "MetaServiceUri": "http://tecedupune.ap.tieto.com:23610",
+  "Domain": "TESSA_META",
+  "ApplicationKey": "SampleApp"
 }
