--- a/LoogingNetCore/LoogingNetCore/appsettings.json
+++ b/LoogingNetCore/LoogingNetCore/appsettings.json
@@ -6,12 +6,14 @@
       "Microsoft.Hosting.Lifetime": "None"
     },
     "Console": {
-      "IncludeScopes": true,
-     // "StoresController": "Trace"
+      "IncludeScopes": true
+      // "StoresController": "Trace"
     },
     "Debug": {
-     // "LoggingNetCore": "Trace"
-    } 
+      // "LoggingNetCore": "Trace"
+    }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MetaServiceUri": "http://tecedupune.ap.tieto.com:23610",
+  "Domain": "TESSA_META"
 }
