--- a/LoogingNetCore/LoogingNetCore/LoggingNetCore.csproj
+++ b/LoogingNetCore/LoogingNetCore/LoggingNetCore.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.1.3" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+    <PackageReference Include="Sputnik.MetaService.Client" Version="1.2.2" />
+    <PackageReference Include="Sputnik.MetaService.Client.Abstractions" Version="1.2.2" />
+    <PackageReference Include="Sputnik.MetaService.Client.Http" Version="1.2.2" />
   </ItemGroup>
 
   <ItemGroup>
